# cobweb

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
apps/api/: .env.example  alembic.ini  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 0001_initial.py  0002_scan_findings.py  0003_vulnerabilities.py  0004_notifications.py  0005_llm_settings.py  0006_scan_profile_high.py  0007_finding_remediations.py  0008_scan_schedules.py  0009_target_auth_secret.py  0010_finding_suppressions.py
apps/api/cobweb/: main.py
apps/api/cobweb/api/public/: router.py
apps/api/cobweb/api/v1/: audit.py  auth.py  llm.py  notifications.py  projects.py  reports.py  router.py  scans.py  schedules.py  suppressions.py  tokens.py  vulnerabilities.py  (+1 more)
apps/api/cobweb/core/: crypto.py  deps.py  rbac.py  security.py  settings.py
apps/api/cobweb/db/: base.py
apps/api/cobweb/models/: __init__.py  api_token.py  audit.py  llm.py  notification.py  org.py  project.py  scan.py  schedule.py  suppression.py  target.py  user.py  vulnerability.py
apps/api/cobweb/schemas/: auth.py  llm.py  project.py  scan.py  schedule.py  suppression.py  target.py  vulnerability.py
apps/api/cobweb/scripts/: bulk_compliance_map.py
apps/api/cobweb/services/: audit_service.py  diff_service.py  notifications.py  oidc_service.py  pubsub.py  queue.py  report_service.py  scan_orchestrator.py  scheduler_service.py  suppression_service.py  target_verification.py  vuln_service.py
apps/api/tests/: conftest.py  test_auth_flow.py  test_diff_flow.py  test_health.py  test_notifications.py  test_oidc_flow.py  test_public_api.py  test_report_flow.py  test_scan_flow.py  test_vuln_flow.py
apps/cli/: pyproject.toml
apps/cli/cobweb_cli/: main.py
(+75 files in other folders)
