[project]
name = "cobweb"
version = "0.1.0"
description = "Cobweb DAST Scanning Platform — backend API"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30",
  "alembic>=1.14",
  "argon2-cffi>=23.1",
  "python-jose[cryptography]>=3.3",
  "pyotp>=2.9",
  "qrcode[pil]>=7.4",
  "casbin>=1.36",
  "casbin-async-sqlalchemy-adapter>=1.4",
  "redis>=5.2",
  "aio-pika>=9.5",
  "boto3>=1.35",
  "loguru>=0.7",
  "httpx>=0.27",
  "python-multipart>=0.0.18",
  "email-validator>=2.2",
  "slowapi>=0.1.9",
  "authlib>=1.3",
  "weasyprint>=63.0",
  "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6.0",
  "httpx>=0.27",
  "ruff>=0.7",
  "mypy>=1.13",
  "aiosqlite>=0.20",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "ASYNC"]
ignore = ["S101", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cobweb*"]
