[project]
name = "cobweb-cli"
version = "0.3.0"
description = "Cobweb DAST scanner CLI for CI/CD"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27",
  "click>=8.1",
  "rich>=13.7",
]

[project.scripts]
cobweb-cli = "cobweb_cli.main:cli"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cobweb_cli*"]
